--- a/src/assets/styles/00_utils/_1_variables.scss
+++ b/src/assets/styles/00_utils/_1_variables.scss
@@ -6,7 +6,7 @@ $shadow-rgba: rgba(48, 46, 77, 0.15);
 $emptyStars: grey;
 
 $color-primary: var(--skin-color);
-$color-secondary: #ff79da;
+$color-secondary: #ec1839;
 $color-tertiary: #99e2d0;
 $color-accent: #d6fff5;
 $color-white: #fff;
