--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -3,6 +3,7 @@
 :root {
     --bg-black-900: #f2f2fc;
     --bg-black-100: #fdf9ff;
+    --bg-black-75: #f2edf5;
     --bg-black-50: #e8dfec;
     --text-black-900: #302e4d;
     --text-black-700: #504e70;
@@ -12,18 +13,43 @@
 body.dark {
     --bg-black-900: #151515;
     --bg-black-100: #222222;
+    --bg-black-75: #292929;
     --bg-black-50: #393939;
     --text-black-900: #fff;
     --text-black-700: #e9e9e9e9;
     --text-black-500: #d3d3d3;
     .modal {
         background-color: rgba-color($bg-black-900-dark, 0.5);
+        #modalEvent {
+            border: 1px solid var(--bg-black-75);
+        }
         .content {
             box-shadow: 0 0 20px invert-rgba($shadow-rgba);
         }
     }
-    .service .service_container .service-item .service-item-inner:hover {
+    .service .service_container .service-item .service-item-inner {
+        border: 1px solid var(--bg-black-50);
+        border-right-color: #222222;
+        border-bottom-color: #222222;
+        &:hover {
+            border-right-color: #292929;
+            border-bottom-color: #292929;
+            box-shadow: 0 0 20px invert-rgba($shadow-rgba);
+        }
+    }
+    .about-content .timeline {
         box-shadow: 0 0 20px invert-rgba($shadow-rgba);
+    }
+    .about-content
+        .timeline
+        .timeline-item
+        .timeline-text
+        div.div-anime
+        .technologies {
+        @include drop-shadow(rgba(255, 255, 255, 0.25) 3px 1px 1.5px);
+    }
+    .btn {
+        color: black;
     }
 }
 
@@ -135,9 +161,9 @@ h6 {
     // gap: 1.607084289931125%;
 }
 
-.shadow-dark {
-    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
-}
+// .shadow-dark {
+//     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+// }
 
 .fas {
     color: var(--text-black-900);
