--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -5,37 +5,40 @@
 .modal {
     position: fixed;
     width: calc(100vw - 270px); // 270px = header on left
-    min-height: calc(100vh - 117px);
+    min-height: calc(100vh - 0px);
     // min-height: calc(100vh);
 
-    top: 117px;
+    top: 0;
     left: 270px; // 270px = header on left
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
     background-color: rgba-color($bg-black-900-light, 0.5);
-    // background-color: red;
-    // border: 1px solid #000;
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(5px);
     .content {
         position: relative;
-        top: -30px;
-
+        top: 0px;
         overflow: hidden;
         margin-right: 1%;
         min-width: 300px;
         min-height: 100px;
         border-radius: 7px;
         width: 62.5%;
-        box-shadow: 0 0 20px $shadow-rgba;
-        
+        box-shadow: 0 0 40px $shadow-rgba;
         button {
             position: absolute;
-            top: 4px;
-            left: calc(100% - 40px);
+            top: 1.125em;
+            left: calc(100% - 2.25em);
             border: none;
             background-color: transparent;
 
+            &:hover {
+                @include transform(scale(1.1));
+            }
             svg {
                 position: relative;
             }
