--- a/src/assets/styles/00_utils/_1_variables.scss
+++ b/src/assets/styles/00_utils/_1_variables.scss
@@ -6,8 +6,8 @@ $shadow-rgba: rgba(48, 46, 77, 0.15);
 $emptyStars: grey;
 
 $color-primary: var(--skin-color);
-$color-secondary: #ec1839;
-$color-tertiary: #99e2d0;
+$color-secondary: blend-colors($color-primary, #f2f2fc, 50%);
+$color-tertiary: darken-shift($color-primary);
 $color-accent: #d6fff5;
 $color-white: #fff;
 $color-invalid: #db464b;
