--- a/src/components/Modal/ModalService/modalService.scss
+++ b/src/components/Modal/ModalService/modalService.scss
@@ -1,7 +1,7 @@
 @import "../../../assets/styles/00_utils/3_mixins";
 @import "../../../assets/styles/00_utils/4_fonts";
 @import "../../../assets/styles/00_utils/1_variables";
-#modalEvent {
+#modalService {
     // font-family: "Manrope", sans-serif;
     overflow: hidden;
     width: 62.5%;
