--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -2,8 +2,10 @@
 @import "../../assets/styles/00_utils/3_mixins";
 @import "../../assets/styles/00_utils/4_fonts";
 
-.service {
+.service,
+.portfolio {
     .container {
+        // background: #000;
     }
     .service_container {
         align-self: center;
