--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -49,7 +49,34 @@ body.dark {
         @include drop-shadow(rgba(255, 255, 255, 0.25) 3px 1px 1.5px);
     }
     .btn {
-        color: black;
+        // color: #181818;
+        // box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.25);
+        &::after {
+            // box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.35);
+        }
+    }
+    & .timeline-date {
+        i {
+            color: darkgoldenrod;
+        }
+    }
+    #modalPortfolio {
+
+        background-color: var(--bg-black-100);
+        border: 1px solid var(--bg-black-50);
+        border-radius: 10px;
+        transition: all 0.3s ease;
+        .portfolio-item-inner {
+            &:hover {
+                transform: scale(1);
+                box-shadow: 0 0 20px rgba(48, 46, 77, 0);
+                .icon {
+                    font-size: 25px;
+                    color: var(--bg-black-100);
+                    background-color: var(--skin-color);
+                }
+            }
+        }
     }
 }
 
