--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,6 +1,7 @@
 @import "../../assets/styles/00_utils/4_fonts";
 @import "../../assets/styles/00_utils/1_variables";
 @import "../../assets/styles/00_utils/2_functions";
+@import "../../assets/styles/00_utils/3_mixins";
 
 .btn {
     // font-size: 1em;
@@ -9,15 +10,54 @@
     padding: 12px 35px;
     color: var(--bg-black-100);
     color: white;
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    // line-height: 1.5em;
     white-space: nowrap;
     background-color: var(--skin-color);
     border-radius: 40px;
     transition: all 0.3s ease;
     border: none;
+    -webkit-font-smoothing: antialiased;
+    position: relative;
+    z-index: 1;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    margin: 30px 0 58px 7px;
+    // background: linear-gradient(-193.33deg, #ff79da -11.44%, #9356dc 123.93%);
+    background: linear-gradient(
+        -193.33deg,
+        var(--skin-color) -11.44%,
+        #9356dc 123.93%
+    );
 
+    cursor: pointer;
     &:hover {
         transform: scale(1.05);
+        color: $color-white;
+        &::after {
+            opacity: 1;
+            background-color: white;
+            transition: all 300ms;
+        }
+    }
+    &:visited {
+        color: $color-white;
+    }
+
+    &::after {
+        @include after_Before;
+        border-radius: 25px;
+        z-index: -1;
+        opacity: 0;
+        background: linear-gradient(
+            -193.33deg,
+            #ff79da -11.44%,
+            var(--skin-color) 123.93%
+        );
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+        transition: all 450ms;
+        // font-weight: 700;
     }
 }
 .hire-me {
