--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -9,6 +9,16 @@
     --text-black-900: #fff;
     --text-black-700: #e9e9e9e9;
     --text-black-500: #d3d3d3;
+    --skin-color-light: color-mix(
+        in srgb,
+        var(--skin-color) 65%,
+        var(--text-black-700)
+    );
+    --skin-color-dark: color-mix(
+        in srgb,
+        var(--skin-color) 65%,
+        var(--bg-black-900)
+    );
 }
 body.light {
     --bg-black-900: #f2f2fc;
@@ -47,7 +57,7 @@ body.dark {
         }
     }
     .about-content .timeline {
-        border: 0.0625em solid #292929;
+        // border: 0.0625em solid #292929;
         box-shadow: 0 0 0px invert-rgba($shadow-rgba);
         &:hover {
             box-shadow: 0 0 20px invert-rgba($shadow-rgba);
@@ -66,7 +76,7 @@ body.dark {
         // color: #181818;
         box-shadow: 2.5px 5px 15px rgba-color(black, 0.25);
         &::after {
-            box-shadow: 0px 0px 15px var(--skin-color);
+            box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.65);
         }
     }
     & .timeline-date {
@@ -74,19 +84,25 @@ body.dark {
             color: darkgoldenrod;
         }
     }
-    #modalPortfolio {
-        background-color: var(--bg-black-100);
-        border: 1px solid var(--bg-black-50);
-        border-radius: 10px;
-        transition: all 0.3s ease;
-        .portfolio-item-inner {
-            &:hover {
-                transform: scale(1);
-                box-shadow: 0 0 20px rgba(48, 46, 77, 0);
-                .icon {
-                    font-size: 25px;
-                    color: var(--bg-black-100);
-                    background-color: var(--skin-color);
+    .modal {
+        .content {
+            @include drop-shadow(0 0 0px rgba(0, 0, 0, 0));
+            #modalPortfolio,
+            #modalContact {
+                background-color: var(--bg-black-100);
+                border: 1px solid var(--bg-black-50);
+                border-radius: 10px;
+                transition: all 0.3s ease;
+                .portfolio-item-inner {
+                    &:hover {
+                        transform: scale(1);
+                        box-shadow: 0 0 20px rgba(48, 46, 77, 0);
+                        .icon {
+                            font-size: 25px;
+                            color: var(--bg-black-100);
+                            background-color: var(--skin-color);
+                        }
+                    }
                 }
             }
         }
@@ -128,6 +144,7 @@ h6 {
     min-height: 100vh;
     // padding: 0 30px;
     background: var(--bg-black-900);
+    // background: color-mix(in srgb, var(--skin-color) 70%, white);
     opacity: 1;
     position: relative;
     top: 0;
