--- a/src/assets/styles/01_base/_02_pages.scss
+++ b/src/assets/styles/01_base/_02_pages.scss
@@ -1,7 +1,8 @@
 .home,
 .about,
 .service,
-.portfolio {
+.portfolio,
+.contact {
     display: flex;
     flex-flow: column nowrap;
     min-height: 100vh;
