--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -4,7 +4,7 @@
 @import "../../assets/styles/00_utils/3_mixins";
 
 .btn,
-.btn_a {
+a.btn_a {
     border: none;
     display: inline-flex;
     // align-items: center;
@@ -15,7 +15,7 @@
     line-height: 1.5em;
     color: white;
 
-    padding: 13px 35px;
+    padding: 12px 35px 12px 35px;
     border-radius: 40px;
 
     transition: all 0.3s ease;
@@ -29,8 +29,9 @@
     margin: 30px 0 58px 7px;
     background: linear-gradient(
         -193.33deg,
-        var(--skin-color) -11.44%,
-        #9356dc 123.93%
+        var(--skin-color-light) 0%,
+        var(--skin-color) 50%,
+        var(--skin-color-dark) 100%
     );
 
     &:hover {
@@ -41,6 +42,7 @@
         &::after {
             opacity: 1;
             background-color: white;
+            padding: 15px 35px 15px 35px;
             // transition: all 300ms;
             transition: all 450ms;
             // -webkit-font-smoothing: antialiased;
@@ -54,6 +56,8 @@
         @include after_Before;
         @include p;
         line-height: 1.575em;
+        // padding: 13.5px 35px 13.5px 35px;
+
         text-decoration: none;
         border: none;
         border-radius: 40px;
@@ -62,13 +66,25 @@
         -webkit-font-smoothing: antialiased;
         background: linear-gradient(
             -193.33deg,
-            #ff79da -11.44%,
-            var(--skin-color) 123.93%
+            var(--skin-color-dark) 0%,
+            var(--skin-color) 50%,
+            var(--skin-color-light) 100%
         );
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+        background: linear-gradient(
+            -193.33deg,
+            var(--skin-color-light) 0%,
+            var(--skin-color) 50%,
+            var(--skin-color-dark) 100%
+        );
+        // background: #000;
+        box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.35);
         transition: all 450ms;
     }
 }
 .hire-me {
     margin-bottom: 10px;
+    padding: 12.5px 35px;
+}
+.btn_left {
+    margin: 3em 0.937em 0 0;
 }
