--- a/src/pages/Error404/error.scss
+++ b/src/pages/Error404/error.scss
@@ -1,11 +1,12 @@
 .error-404 {
     flex: 1;
     display: flex;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #fff;
-    background-color: #12002b;
+    background-color: var(--bg-black-900);
     text-align: center;
 
     .borderError {
@@ -18,7 +19,7 @@
         padding: 20px;
         .error-404_h1 {
             font-size: 25vw;
-            color: #fff;
+            color: var(--skin-color);
             border: 1px solid #fff;
             padding: 0 20px;
             margin: 20px;
@@ -33,7 +34,7 @@
 
         .error-404_a {
             text-decoration: underline;
-            color: #fff;
+            color: var(--skin-color);
             display: block;
             margin-top: 15px;
             font-size: 1.4rem;
