--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,3 +5,5 @@
 
 @import "./01_base/01_base";
 @import "./01_base/02_pages";
+@import "./01_base/03_navToggler";
+@import "./01_base/04_responsive";
