--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -1,20 +1,4 @@
 /****** [General] ******/
-// @import "./02_fonts";
-.aside {
-    width: 270px;
-    // left: -270px;
-}
-.main-content {
-    padding-left: 270px;
-    position: relative;
-
-}
-.modal {
-    width: calc(100vw - 270px);
-    left: 270px;
-    // width: calc(100vw + 20px);
-    // left: -10px;
-}
 :root {
     --bg-black-900: #151515;
     --bg-black-100: #222222;
@@ -38,6 +22,15 @@
         var(--skin-color) 31%,
         var(--bg-black-900)
     );
+
+    // --desktop-large: 1440px;
+}
+body {
+    line-height: 1.5;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    overflow-x: hidden !important;
+    background: var(--bg-black-900);
 }
 body.light {
     --bg-black-900: #f2f2fc;
@@ -84,7 +77,6 @@ body.dark {
     }
     .btn,
     .btn_a {
-        // color: #181818;
         box-shadow: 2.5px 5px 15px rgba-color(black, 0.25);
         &::after {
             box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.65);
@@ -108,10 +100,8 @@ body.dark {
                 background-color: var(--bg-black-100);
                 border: 1px solid var(--bg-black-50);
                 border-radius: 10px;
-                // transition: all 0.3s ease;
                 .portfolio-item-inner {
                     &:hover {
-                        // transform: scale(1);
                         box-shadow: 0 0 20px rgba(48, 46, 77, 0);
                         .icon {
                             font-size: 25px;
@@ -123,14 +113,6 @@ body.dark {
             }
         }
     }
-}
-
-body {
-    line-height: 1.5;
-    font-size: 16px;
-    font-family: "Poppins", sans-serif;
-    overflow-x: hidden !important;
-    background: var(--bg-black-900);
 }
 
 * {
@@ -183,11 +165,10 @@ ul {
     align-items: center;
     z-index: 1;
     background-color: rgba-color($bg-black-900-light, 0.5);
-    border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid #000;
+    backdrop-filter: blur(3px);
+
     .content {
         position: relative;
         top: 0px;
@@ -218,4 +199,51 @@ ul {
 
 .fas {
     color: var(--text-black-900);
+}
+.nav-toggler {
+    position: fixed;
+    top: 22.5px;
+    right: 22.5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 40px;
+    border: 1px solid var(--bg-black-50);
+    border-radius: 5px;
+    background: var(--bg-black-100);
+    z-index: 10000;
+
+    span {
+        position: relative;
+        display: inline-block;
+        width: 18px;
+        height: 2px;
+        background: var(--skin-color);
+
+        &::before {
+            position: absolute;
+            top: -6px;
+            left: 0;
+            content: "";
+            width: 18px;
+            height: 2px;
+            background: var(--skin-color);
+        }
+
+        &::after {
+            position: absolute;
+            top: 6px;
+            left: 0;
+            content: "";
+            width: 18px;
+            height: 2px;
+            background: var(--skin-color);
+        }
+    }
+}
+.col_End {
+    width: 100%;
+    height: 1px;
 }
