--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -4,11 +4,6 @@
 @import "../../assets/styles/00_utils/4_fonts";
 
 .about {
-    // display: flex;
-    // flex-flow: column nowrap;
-    // min-height: 100vh;
-    // position: relative;
-    // width: 100%;
     &-content {
         width: 100%;
         & .about-text {
@@ -26,71 +21,80 @@
         }
         .row {
             @include row_R;
-            justify-content: center;
+            justify-content: flex-start;
 
-            & .personal-info {
+            .personal-info {
                 @include row_R;
+                top: 1px;
                 gap: 0;
                 flex: 0 0 60.69645785503444%;
                 max-width: 60.69645785503444%;
-                margin: 2.5em 0 0 0;
-                & .info-item {
+                margin: 2em 0 0 0;
+                height: calc(100% - 25px);
+                .info-item {
                     flex: 0 0 50%;
                     max-width: 50%;
-                    & p {
+                    
+                    p {
                         border-bottom: 1px solid var(--bg-black-50);
-                        padding: 0.625em 0;
-                        padding: 0.7em 0;
+                        // padding: 0.625em 0;
+                        padding: 0.8em 0;
+
                         @include h5;
-                        // line-height: 2em;
-                        & span {
+
+                        span {
                             @include p;
                             margin-left: 0.25em;
                         }
                     }
                 }
-                & .buttons {
-                    margin-top: 0.795em;
-                    & .btn_right {
-                        padding: 13px 35px;
+            }
+            .skills {
+                flex: 0 0 35.69645785503444%;
+                max-width: 35.69645785503444%;
+                margin-top: 2.3em;
+                // height: calc(100% + 50px);
+                & .skill-item {
+                    @include flex_100;
+                    margin-bottom: 1.5625em;
+                    & h4 {
+                        @include h5;
+                        line-height: 2.75em;
                     }
-                    .btn_left {
-                        margin: 3em 0.937em 0 0;
-                        padding: 13px 35px;
+                    & .progress {
+                        position: relative;
+                        width: 100%;
+                        height: 0.4375em;
+                        background-color: var(--bg-black-50);
+
+                        & .progress-in {
+                            @include after_Before;
+                            height: 100%;
+                            @include border-radius(0.25em);
+                            background-color: var(--skin-color);
+                        }
+                        & .skill-percent {
+                            position: absolute;
+                            right: 0;
+                            top: -2.5em;
+                            line-height: 2.5em;
+                            color: var(--text-black-900);
+                        }
                     }
                 }
             }
-        }
-        & .skills {
-            flex: 0 0 35.69645785503444%;
-            max-width: 35.69645785503444%;
-            margin-top: 2.5em;
-            & .skill-item {
-                @include flex_100;
-                margin-bottom: 1.5625em;
-                & h4 {
-                    @include h5;
-                    line-height: 2.75em;
+            .buttons {
+                height: 50px;
+                position: relative;
+                bottom: 5.2em;
+                width: 50%;
+                margin: 0;
+                & .btn_right {
+                    padding: 13px 35px;
                 }
-                & .progress {
-                    position: relative;
-                    width: 100%;
-                    height: 0.4375em;
-                    background-color: var(--bg-black-50);
-
-                    & .progress-in {
-                        @include after_Before;
-                        height: 100%;
-                        @include border-radius(0.25em);
-                        background-color: var(--skin-color);
-                    }
-                    & .skill-percent {
-                        position: absolute;
-                        right: 0;
-                        top: -2.5em;
-                        line-height: 2.5em;
-                        color: var(--text-black-900);
-                    }
+                .btn_left {
+                    margin: 0 0.937em 0 0;
+                    padding: 13px 35px;
                 }
             }
         }
