--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,4 +6,6 @@
 @import "./01_base/01_base";
 @import "./01_base/02_pages";
 @import "./01_base/03_navToggler";
+@import "./01_base/04_darkMode";
 @import "./01_base/04_responsive";
+@import "./01_base/05_tablette.scss";
