--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -49,70 +49,9 @@ body.dark {
     --text-black-900: #fff;
     --text-black-700: #e9e9e9e9;
     --text-black-500: #d3d3d3;
-
-    .service .service_container .service-item .service-item-inner {
-        border: 1px solid var(--bg-black-50);
-        border-right-color: #222222;
-        border-bottom-color: #222222;
-        &:hover {
-            border-right-color: #292929;
-            border-bottom-color: #292929;
-            box-shadow: 0 0 20px invert-rgba($shadow-rgba);
-        }
-    }
-    .about-content .timeline {
-        // border: 0.0625em solid #292929;
-        box-shadow: 0 0 0px invert-rgba($shadow-rgba);
-        &:hover {
-            box-shadow: 0 0 20px invert-rgba($shadow-rgba);
-        }
-    }
-    .about-content
-        .timeline
-        .timeline-item
-        .timeline-text
-        div.div-anime
-        .technologies {
-        @include drop-shadow(var(--skin-color-darked) 0px 0px 10px);
-    }
-    .btn,
-    .btn_a {
-        box-shadow: 2.5px 5px 15px rgba-color(black, 0.25);
-        &::after {
-            box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.65);
-        }
-    }
-    & .timeline-date {
-        i {
-            color: darkgoldenrod;
-        }
-    }
-
-    .modal {
-        background-color: rgba-color($bg-black-900-dark, 0.5);
-
-        .content {
-            @include drop-shadow(0 0 0px rgba(0, 0, 0, 0));
-            box-shadow: 0 0 20px invert-rgba($shadow-rgba);
-            #modalEvent,
-            #modalPortfolio,
-            #modalContact {
-                background-color: var(--bg-black-100);
-                border: 1px solid var(--bg-black-50);
-                border-radius: 10px;
-                .portfolio-item-inner {
-                    &:hover {
-                        box-shadow: 0 0 20px rgba(48, 46, 77, 0);
-                        .icon {
-                            font-size: 25px;
-                            color: var(--bg-black-100);
-                            background-color: var(--skin-color);
-                        }
-                    }
-                }
-            }
-        }
-    }
+}
+#tablet {
+    display: none;
 }
 
 * {
@@ -200,7 +139,8 @@ ul {
 .fas {
     color: var(--text-black-900);
 }
-.nav-toggler {
+.nav-toggler,
+#nav-toggler {
     position: fixed;
     top: 22.5px;
     right: 22.5px;
@@ -213,7 +153,7 @@ ul {
     border: 1px solid var(--bg-black-50);
     border-radius: 5px;
     background: var(--bg-black-100);
-    z-index: 10000;
+    z-index: 1000;
 
     span {
         position: relative;
