--- a/src/components/00-Header/languageSelector.scss
+++ b/src/components/00-Header/languageSelector.scss
@@ -36,18 +36,13 @@
     position: absolute;
     top: 57px;
     @include transform(translateX(-200px) scaleY(0));
-
     opacity: 0;
-    border-radius: 4px;
+    // border-radius: 4px;
     padding: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     z-index: 1;
-
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+
 }
 
 .flagLogo {
