--- a/src/assets/styles/01_base/_04_responsive.scss
+++ b/src/assets/styles/01_base/_04_responsive.scss
@@ -85,7 +85,7 @@
                     .centerNB {
                         position: relative;
                         z-index: 10;
-                        background-image: url(../../img/a.png);
+                        background-image: url(../../img/profileBG.webp);
                         // background-image: url(${require(`../../assets/img/a.png`)});i
 
                         background-repeat: no-repeat;
